--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       auto2top: true,
     }
   </script>
-   <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
+   <!-- <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script> -->
 </body>
 </html>
