--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title></title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css" title="vue" />
   <style>
     :root {
       --theme-color : #237e4b;
@@ -24,13 +25,15 @@
   <script>
     window.$docsify = {
       el: '#main',
-      loadNavbar: "navbar.md",
+      loadSidebar: "sidebar.md",
       maxLevel: 4,
       subMaxLevel: 2,
       mergeNavbar: true,
       auto2top: true,
+      homepage: "About.md"
     }
   </script>
-   <!-- <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script> -->
+   <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
+   <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-csharp.min.js"></script>
 </body>
 </html>
